PROJECT (plk_qt_gui CXX) 

CMAKE_MINIMUM_REQUIRED (VERSION 2.8.11)

INCLUDE_DIRECTORIES(${DEMO_PLK_QT_GUI_INCLUDE_DIR})

FILE ( GLOB_RECURSE GUI_SOURCES "${DEMO_PLK_QT_GUI_SOURCE_DIR}/*.cpp" )
FILE ( GLOB_RECURSE GUI_HEADERS "${DEMO_PLK_QT_GUI_INCLUDE_DIR}/*.h" )

# Find the QtWidgets library
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Gui REQUIRED)

# Add the include directories for the Qt 5 Widgets module to
# the compile lines.
include_directories(${Qt5Widgets_INCLUDE_DIRS})

ADD_LIBRARY(plk_qt_gui ${LIBRARY_TYPE} ${GUI_SOURCES} ${GUI_HEADERS})
IF(UNIX)
SET_TARGET_PROPERTIES(plk_qt_gui PROPERTIES PREFIX "")
ENDIF()

TARGET_LINK_LIBRARIES(plk_qt_gui ${ADD_ADDITIONAL_DEPENDENCIES})

SET(CMAKE_BUILD_TYPE Release)
SET(LIBRARY_TYPE SHARED)

### TODO update
IF(WIN32)
FILE ( GLOB_RECURSE LIBS "${CMAKE_SOURCE_DIR}/resources/lib/*.dll" )
INSTALL(
FILES ${LIBS} DESTINATION ${CMAKE_SOURCE_DIR}/bin/
)
ENDIF()

INSTALL(
TARGETS plk_qt_gui 
RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin
LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/bin
)
